[package]
name = "askme-memorize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
colored = "2.0.0"
ctrlc = "3.4.0"
figlet-rs = "0.1.5"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
yaml = "0.3.0"
